crates/science-parser/tests/snapshots/migration__the_word_trait_is_reported_where_interface_belongs.snap
---
source: crates/science-parser/tests/migration.rs
expression: parse_source_allowing_errors(source)
---
Module @0..51
  Interface `Summarize` @0..50
    methods
      Fn `summarize` @21..50
        receiver: self @35..39
        ret: Path `String` @44..50
--- diagnostics ---
SC0139 @0..5 the declaration is written `interface`
