crates/science-parser/tests/snapshots/migration__the_word_while_does_not_derail_the_rest_of_the_file.snap
---
source: crates/science-parser/tests/migration.rs
expression: parse_source_allowing_errors(source)
---
Module @0..74
  Fn `f` @0..73
    params
      Param `n` @11..17
        type: Path `Int` @14..17
    body: Block @24..73
      Loop @24..49
        body: Block @45..49
          tail: Call @45..49
            callee: Path `g` @45..46
            args
              Path `n` @47..48
      tail: Loop @54..73
        body: Block @68..73
          Break @68..73
--- diagnostics ---
SC0142 @24..29 the unbounded loop is written `loop`
  note end it with the condition negated: make `if not …: break` the first statement of the body, or write a count as a range, `for i in 0..n:`
